tests/semantic/disjoint_names2/disjoint_names2.err
Error: Name clash on relation typerel in file disjoint_names2.dl at line 9
.decl typerel(x : number)
------^-------------------
Error: Name clash on relation nestedInst.nesteditem in file disjoint_names2.dl at line 16
    .decl nesteditem(x:nesteditem)
----------^------------------------
Error: Name clash on relation myChild.alpha in file disjoint_names2.dl at line 30
    .decl alpha(x:number)
----------^---------------
Warning: Deprecated type declaration used in file disjoint_names2.dl at line 35
    .type alpha
----^-----------
3 errors generated, evaluation aborted
